--- a/support/power-platform/dataverse/toc.yml
+++ b/support/power-platform/dataverse/toc.yml
@@ -14,7 +14,7 @@
   items:
     - name: 401 Unauthorized exception when using Server-Side Synchronization
       href: email-exchange-synchronization/exception-when-using-server-side-sync.md
-    - name: "'A scheduling conflict was found when saving appointment from Exchange to Dynamics 365' error"
+    - name: '"A scheduling conflict was found when saving appointment" error'
       href: email-exchange-synchronization/scheduling-conflict-saving-appointment.md
     - name: An appointment is canceled or deleted during server-side synchronization
       href: email-exchange-synchronization/an-appointment-is-canceled-deleted.md
