--- a/support/developer/webapps/iis/toc.yml
+++ b/support/developer/webapps/iis/toc.yml
@@ -94,10 +94,6 @@ items:
   - name: Can't access Web sites when security event log is full
     href: general/users-cannot-access-web-sites-when-log-full.md
 
-- name: High memory usage
-  items:
-  - name: Data capture for managed memory leaks
-    href: site-behavior-performance/data-capture-managed-memory-leak.md
 - name: Health, diagnostic, and performance features
   href: health-diagnostic-performance/toc.yml
 
@@ -138,6 +134,14 @@ items:
     href: site-behavior-performance/failed-generate-certificate-request.md
   - name: FtpPutFile always returns success
     href: site-behavior-performance/ftpputfile-success-451-status.md
+  - name: High memory usage
+    items:
+    - name: Data capture for managed memory leaks
+      href: site-behavior-performance/data-capture-managed-memory-leak.md
+    - name: High memory consumption issues overview
+      href: site-behavior-performance/high-memory-consumption-issues-overview.md
+    - name: Troubleshoot native memory leak in an IIS 7.x application pool
+      href: health-diagnostic-performance/troubleshoot-native-memory-leak-iis-7x-application-pool.md
   - name: HTTP error 404.2
     href: site-behavior-performance/http-error-402-webpage.md
   - name: HTTP error 500 when you use Response.BinaryWrite
