--- a/support/developer/webapps/iis/toc.yml
+++ b/support/developer/webapps/iis/toc.yml
@@ -134,10 +134,10 @@ items:
     href: site-behavior-performance/ftpputfile-success-451-status.md
   - name: High memory usage
     items:
+    - name: High memory consumption issue overview
+      href: site-behavior-performance/high-memory-consumption-issues-overview.md
     - name: Data capture for managed memory leaks
       href: site-behavior-performance/data-capture-managed-memory-leak.md
-    - name: High memory consumption issues overview
-      href: site-behavior-performance/high-memory-consumption-issues-overview.md
     - name: Troubleshoot native memory leak in an IIS 7.x application pool
       href: health-diagnostic-performance/troubleshoot-native-memory-leak-iis-7x-application-pool.md
   - name: HTTP error 404.2
