--- a/support/entra/entra-id/toc.yml
+++ b/support/entra/entra-id/toc.yml
@@ -232,7 +232,7 @@
       href: mfa/cannot-verify-account-reset-pwd.md
 - name: Microsoft Graph Users, Groups, and Entra APIs
   items: 
-   - name: Handling errors in Graph API requests with PowerShell
+   - name: Handling errors in Graph API requests with Invoke-RestMethod
      href: app-integration/graph-api-error-handling-invoke-restmethod.md
    - name: Troubleshoot Authorization_RequestDenied error
      href: app-integration/troubleshoot-authorization-requestdenied-graph-api.md
