--- a/support/entra/entra-id/toc.yml
+++ b/support/entra/entra-id/toc.yml
@@ -96,6 +96,10 @@
         href: app-integration/troubleshoot-sign-in-saml-based-apps.md
       - name: User redirected to incorrect reply URL or localhost
         href: app-integration/reply-url-redirected-to-localhost.md
+    - name: App Registrations
+      items:
+      - name: Troubleshooting consent issues
+        href: app-integration/troubleshoot-consent-issues.md
 
 - name: Business To Consumer (B2C) Tenants
   items:
