--- a/support/toc.yml
+++ b/support/toc.yml
@@ -3,7 +3,7 @@
 - name: Welcome
   href: developer/dotnet/welcome-dotnet-landing.yml
 - name: Welcome
-  href: developer/host-integration-server/welcome-host-integration-server.yml
+  href: developer/host-integration-server/data-integration/configure-data-sources.md
 - name: Welcome
   href: developer/visualstudio/welcome-visual-studio.yml
 - name: Welcome
