--- a/Viva/Glint/toc.yml
+++ b/Viva/Glint/toc.yml
@@ -3,7 +3,7 @@
   items:
     - name: Accessing the platform
       items:
-        - name: Resolve issues when accessing survey results as a manager
+        - name: Resolve issues when accessing survey results
           href: ./access/manager-access-issues.md
     - name: Contact support
       href: ./contact-support/get-support-viva-glint.md
