fix image format issue

--- a/support/entra/entra-id/toc.yml
+++ b/support/entra/entra-id/toc.yml
@@ -47,7 +47,7 @@
     
 - name: Microsoft Entra App Integration and Development 
   items:
-  - name: Developing or Registering apps
+  - name: Developing or registering apps
     items:
       - name: IDX10501 Error in ASP.NET Core with Azure B2C Custom Policy
         href: app-integration/troubleshoot-error-idx10501-aspnet-b2c.md
