--- a/support/virtual-desktop/toc.yml
+++ b/support/virtual-desktop/toc.yml
@@ -1,3 +1,59 @@
 items:
-  - name: anchor
-    href: anchor.md
+- name: Diagnosing graphics performance issues
+  href: ./remotefx-graphics-performance-counters.md
+- name: Azure Virtual Desktop Agent
+  href: ./troubleshoot-agent.md
+- name: App attach
+  href: ./troubleshoot-app-attach.md
+- name: Azure Files authorization
+  href: ./troubleshoot-authorization.md
+- name: Connections to Microsoft Entra joined VMs
+  href: ./troubleshoot-azure-ad-connections.md
+- name: Android/Chrome OS client
+  href: ./troubleshoot-client-android-chrome-os.md
+- name: iOS/iPadOS client
+  href: ./troubleshoot-client-ios-ipados.md
+- name: macOS client
+  href: ./troubleshoot-client-macos.md
+- name: Remote Desktop app for Windows
+  href: ./troubleshoot-client-microsoft-store.md
+- name: Web client
+  href: ./troubleshoot-client-web.md
+- name: Windows Desktop client
+  href: ./troubleshoot-client-windows.md
+- name: Azure Virtual Desktop Store app
+  href: ./troubleshoot-client-windows-azure-virtual-desktop-app.md
+- name: Windows Desktop client basic troubleshooting
+  href: ./troubleshoot-client-windows-basic-shared.md
+- name: Connection quality issues
+  href: ./troubleshoot-connection-quality.md
+- name: Custom image templates
+  href: ./troubleshoot-custom-image-templates.md
+- name: Device redirections
+  href: ./troubleshoot-device-redirections.md
+- name: Azure Virtual Desktop Insights
+  href: ./troubleshoot-insights.md
+- name: Management issues
+  href: ./troubleshoot-management-issues.md
+- name: Multimedia redirection
+  href: ./troubleshoot-multimedia-redirection.md
+- name: Azure Virtual Desktop PowerShell
+  href: ./troubleshoot-powershell.md
+- name: Quickstart
+  href: ./troubleshoot-quickstart.md
+- name: RDP Shortpath
+  href: ./troubleshoot-rdp-shortpath.md
+- name: Remote Desktop service connections
+  href: ./troubleshoot-service-connection.md
+- name: Session host update
+  href: ./troubleshoot-session-host-configuration-update.md
+- name: Host pool creation
+  href: ./troubleshoot-set-up-issues.md
+- name: Troubleshooting overview, feedback, and support
+  href: ./troubleshoot-set-up-overview.md
+- name: Microsoft Teams
+  href: ./troubleshoot-teams.md
+- name: Session host virtual machine configuration
+  href: ./troubleshoot-vm-configuration.md
+- name: anchor
+  href: anchor.md
