Update links and add zone pivot

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -14,7 +14,8 @@
       ],
       "open_to_public_contributors": true,
       "type_mapping": {
-        "Conceptual": "Content"
+        "Conceptual": "Content",
+        "ZonePivotGroups": "Toc"
       },
       "template_folder": "_themes"
     }
