--- a/support/azure/app-service/app-service-security-faq.yml
+++ b/support/azure/app-service/app-service-security-faq.yml
@@ -1,3 +1,4 @@
+### YamlMime:FAQ
 metadata:
   title: FAQs about App Service Security
   description: Describes common questions and answers about App Service Security
@@ -7,19 +8,19 @@ metadata:
   ms.date: 01/10/2025
   ms.service: azure-app-service
 title: Frequently asked questions about App Service Security
-summary: >-
+summary: |
   This article answers common questions about [App Service Security](/azure/app-service/overview-security). [INCLUDE
   [support-disclaimer](../../includes/support-disclaimer.md)]
 sections:
   - name: Common questions
     questions:
-      - question: >-
+      - question: |
           How do I know whether a specific CVE (common vulnerability) or known security issue applies to my Web App?
-        answer: >-
+        answer: |
           The Microsoft Security Response Center (MSRC) investigates all reports of security vulnerabilities affecting Microsoft products and services. MSRC provides the information at the [Security Update Guide](https://msrc.microsoft.com/update-guide/vulnerability) as part of the ongoing effort to help you manage security risks and help keep your systems protected.
 
           If your question wasn’t answered and you still need support, have the number of the CVE you would like to check and report a vulnerability on [Microsoft Security Response Center](https://msrc.microsoft.com/) or submit a support request at [Azure support](https://ms.portal.azure.com/#blade/Microsoft_Azure_Support/HelpAndSupportBlade/overview?DMC=troubleshoot).
-      - question: >-
+      - question: |
           How do I know when a particular specific version of software or security patch will be installed at the Azure platform runtime?
         answer: 
           App Service is a platform with various underlying technologies like Windows, Linux, and web application frameworks. Updates are applied at a routine cadence for OS, host runtime, and Microsoft image repo.
@@ -31,12 +32,12 @@ sections:
           - What is the security patch version deployed on Azure for this software. 
           - Is the patch already applied in Azure or not.
       - question: Is TLS 1.3 supported on Azure App Service?
-        answer: >-
+        answer: |
           For incoming requests to your web app, App Service supports TLS versions 1.0, 1.1, 1.2, and 1.3.
 
           Check [Azure App Service TLS overview](/azure/app-service/overview-tls) for more information.
       - question: How do I disable weak ciphers on Azure App Service?
-        answer: >-
+        answer: |
           A cipher suite is a set of instructions that contains algorithms and protocols to help secure network connections between clients and servers. By default the front-end’s OS would pick the most secure cipher suite that is supported by both the front-end and the client. However, if the client only supports weak cipher suites, then the front-end’s OS would pick a weak cipher suite that they both support. To help you have a clearer understanding of Cipher suites, see[Demystifying Cipher Suites on Azure AppServices](https://techcommunity.microsoft.com/blog/appsonazureblog/demystifying-cipher-suites-on-azure-app-services/2656254).
 
           For [Azure App Service Environment](/azure/app-service/environment/overview) (ASE) you can set your own ciphers through Azure Resource Explorer, refer to [Change TLS cipher suite order](/azure/app-service/environment/app-service-app-service-environment-custom-settings) for setting guidance.
@@ -46,7 +47,7 @@ sections:
 
           You can also check our [FAQ on App Service cipher suites](https://techcommunity.microsoft.com/t5/apps-on-azure-blog/faq-on-app-service-cipher-suites/ba-p/3881922).
       - question: How do I report a DDoS or Suspicious Activity?
-        answer: >-
+        answer: |
           The App Service plans and app services within the plan aren't protected by DDoS protection by default.
 
           [Azure Traffic Manager](/azure/traffic-manager/traffic-manager-overview) is a DNS-based traffic load balancer that enables you to distribute traffic optimally to services across global Azure regions, while providing high availability and responsiveness. However, Traffic Manager doesn't provide protection against DDoS attacks.
@@ -54,7 +55,7 @@ sections:
           You can use [Azure DDoS Protection](/azure/ddos-protection/ddos-protection-overview) to protect your Azure resources from Distributed Denial of Service (DDoS)
           attacks. Backed by the Microsoft global network, DDoS Protection brings massive DDoS mitigation capacity to every Azure region. Scrub traffic at the Azure network edge before it can affect the availability of your service.
       - question: I suspect my site is being hacked, what should I do?
-        answer: >-
+        answer: |
           Microsoft secures and [frequently updates the hosting environment and infrastructure](/azure/app-service/overview-patch-os-runtime). If the site is hacked or defaced it's almost always because some aspect of the site itself is exploited, commonly an outdated package.
 
           App Service doesn't prevent insecure apps from running. If the site is somehow vulnerable, the only permanent fix is to deploy updated site code. This is an action that you must do as Microsoft can't update the site code.
@@ -67,7 +68,7 @@ sections:
 
           You can [restore a backup](azure/app-service/manage-backup) or redeploy the site, but this isn't a long term fix if the security issue isn't fixed.
       - question: My site is added to the blocklist, what should I do?
-        answer:  >-
+        answer:  |
           In a multitenant environment where customers share IP addresses, occasional instances of malicious content on certain sites can occur. This may result from either a security compromise or intentional actions. Regardless of the cause, such incidents can lead to shared IP addresses being added to various online blocklists. Unfortunately, when a shared IP is blocklisted, it often impacts legitimate sites using the same address.
           
            - For Inbound IP blacklisted, get a [static inbound IP](/azure/app-service/overview-inbound-outbound-ips) by securing your domain with IP based SSL. Another solution to this is to use Azure's services like  [Azure Application Gateway](/azure/application-gateway/configure-web-app) or [App Service Environment](/azure/app-service/environment/networking) (ASE) to have a dedicated inbound IP address.
@@ -83,7 +84,7 @@ sections:
   - name: Common Concerns
     questions:
       - question: Warnings or alerts provided by security-scans reports.
-        answer: >-
+        answer: |
           There may be various concerns about the security scan results. Security scans are often run against a Web App URL as part of testing and compliance.  Confirm that the URL tested has DNS that resolves at a Web App, if it resolves elsewhere like an [Application Gateway](/azure/application-gateway/overview) this could be the place to make a change.
 
           Some scan results could be a false positive, or others could be a genuine security issues that may require a consult with [Azure support](https://ms.portal.azure.com/#view/Microsoft_Azure_Support/HelpAndSupportBlade/~/overview?DMC=troubleshoot).
